# logutil

./: .bumpversion.cfg  .clang-format  .clang-tidy  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: cmake-multi-platform.yml
cmake/: config.cmake.in
inc/: Chameleon.h  ConfigFile.h  logging.h
include/: Chameleon.h  ConfigFile.h  api_visibility.h  common.h  logging.h  rotating_sqllite_sink-inl.h  rotating_sqllite_sink.h
include/details/: file_sqllite_helper-inl copy.h  file_sqllite_helper-inl.h  file_sqllite_helper.h
include/sinks/: rotating_sqllite_sink-inl.h  rotating_sqllite_sink.h
src/: Chameleon.cpp  ConfigFile.cpp  logging.cpp  main.cpp  rotating_sqllite_sink.cpp
src/sinks/: rotating_sqllite_sink.cpp
